<resources>
    <string name="app_name">GoLap</string>
    <string name="title_home">Home</string>
    <string name="title_recom">Recommendation</string>
    <string name="title_predict">Predict</string>
    <string name="a">Let\'s Get Started!</string>
    <string name="b">Find laptops that suitable for you in our app!</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="search">Search…</string>
    <string name="cart_button">Cart Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="title_homepage">Recommended For You</string>
    <string name="title_login_page">Ready to find laptops that suitable for you?</string>
    <string name="message_login_page">Login to your account!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Deskripsi</string>
    <string name="dash_budget">Enter Your Budget</string>
    <string name="dash_recom">Show Recommendations</string>
    <string name="dash_noresult">No laptops found within your budget.</string>
    <string name="name">Name</string>
    <string name="title_signup_page">Complete your personal data below!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="analyze">Analyze</string>
    <string name="laptop_image">Laptop Image</string>
    <string name="login_success">Login Success!</string>
    <string name="laptop_name">Laptop Name</string>
    <string name="price">Price</string>
    <string name="back">Back</string>
    <string name="specification">Specification</string>
    <string name="lapy">Sample Laptop</string>
    <string name="buy">Buy in E-commerce</string>
    <string name="invalid_budget">Invalid Budget</string>
    <string name="no_result">No Result</string>
    <string name="title_notifications">Prediction</string>
        <string name="hint_ram">e.g., 16</string>
        <string name="hint_processor">e.g., Intel Core i7</string>
        <string name="hint_storage">e.g., 512</string>
        <string name="hint_os">e.g., Windows</string>
        <string name="hint_screen_size">e.g., 15.6</string>
        <string name="hint_weight">e.g., 1.8</string>
        <string name="hint_touchscreen">e.g., Yes or No</string>
        <string name="hint_resolution">e.g., 1920x1080</string>
        <string name="hint_battery_life">e.g., 8</string>
        <string name="submit_button">Submit</string>
</resources>