<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/et_ram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="ram"
            android:hint="@string/hint_ram"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_processor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="processor"
            android:hint="@string/hint_processor"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="storage"
            android:hint="@string/hint_storage"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="os"
            android:hint="@string/hint_os"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_screen_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="screenSize"
            android:hint="@string/hint_screen_size"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="weight"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_touchscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="touchscreen"
            android:hint="@string/hint_touchscreen"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="resolution"
            android:hint="@string/hint_resolution"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_battery_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="batteryLife"
            android:hint="@string/hint_battery_life"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit_button" />
    </LinearLayout>
</ScrollView>
